Input Latency traced correctly for mouse events.

Previously, in the case where no swap was produced, we didn't
terminate mouse event async slices. Now we do.

This requires making some of the events blocking, as we need to know whether or not renderering was scheduled at the time we process the event ack. If the event is non-blocking, we receive a synthetic ACK immediately, and don't know whether or not rendering will be scheduled.

BUG=722807

Review-Url: https://codereview.chromium.org/2884953002
Cr-Commit-Position: refs/heads/master@{#473334}

Former-commit-id: 4b3f1a993bb370e07a7679d119fc511cfb5cbb51