content/browser/renderer_host/input/input_router_impl.cc
@@ -205,9 +205,7 @@ void InputRouterImpl::SendTouchEvent(
 // TouchpadTapSuppressionController.
 void InputRouterImpl::SendMouseEventImmediately(
     const MouseEventWithLatencyInfo& mouse_event) {
-  if (mouse_event.event.GetType() == blink::WebInputEvent::kMouseMove)
-    mouse_move_queue_.push_back(mouse_event);
-
+  mouse_event_queue_.push_back(mouse_event);
   FilterAndSendWebInputEvent(mouse_event.event, mouse_event.latency);
 }
 
@@ -238,7 +236,7 @@ void InputRouterImpl::RequestNotificationWhenFlushed() {
 
 bool InputRouterImpl::HasPendingEvents() const {
   return !touch_event_queue_->Empty() || !gesture_event_queue_.empty() ||
-         !key_queue_.empty() || !mouse_move_queue_.empty() ||
+         !key_queue_.empty() || !mouse_event_queue_.empty() ||
          wheel_event_queue_.has_pending() || select_message_pending_ ||
          move_caret_pending_ || active_renderer_fling_count_ > 0;
 }
@@ -585,15 +583,12 @@ void InputRouterImpl::ProcessKeyboardAck(blink::WebInputEvent::Type type,
 void InputRouterImpl::ProcessMouseAck(blink::WebInputEvent::Type type,
                                       InputEventAckState ack_result,
                                       const ui::LatencyInfo& latency) {
-  if (type != WebInputEvent::kMouseMove)
-    return;
-
-  if (mouse_move_queue_.empty()) {
+  if (mouse_event_queue_.empty()) {
     ack_handler_->OnUnexpectedEventAck(InputAckHandler::UNEXPECTED_ACK);
   } else {
-    MouseEventWithLatencyInfo front_item = mouse_move_queue_.front();
+    MouseEventWithLatencyInfo front_item = mouse_event_queue_.front();
     front_item.latency.AddNewLatencyFrom(latency);
-    mouse_move_queue_.pop_front();
+    mouse_event_queue_.pop_front();
     ack_handler_->OnMouseEventAck(front_item, ack_result);
   }
 }
